# StkOnStkOff

./: .gitignore  README.rst  create_venv.ps1  db_setup.sh  make_project_venv.sh  pyproject.toml  setup.cfg  testing.py
.optional/: 1password_cli.ps1  1password_cli_installation.sh  data_to_sharepoint.py  mytools.yaml  sharepoint_rest_request.py
StkOnStkOff/: README.rst  myprofject.toml  setup.cfg
StkOnStkOff.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
StkOnStkOff/tests/infrastucture/: webpdf-web.yaml
data/: aws_services.csv  prefix_strings.db  settings.yaml  template_paths.db
docs/: Information.txt  index.html
docs/styles/: styles
stkonstkoff/: .db_setup.sh.swp  AWSUserCredentials.py  CloudFormations.py  DataHandling.py  Database.py  ErrorHandler.py  Prompts.py  StkDatabase.py  UserAuthentication.py  Utilities.py  __init__.py  __inti__.py  main.py  s3.py  stkonstkoff.py
stkonstkoff/CloudFormations/: CFStacks.py
stkonstkoff/Logging/: Logging.py  Logs.py  __init__.py
stkonstkoff/aws_authentication/: aws_authentication.py
stkonstkoff/cloudformations/: CloudFormationStacks.py  CloudFormationTemplate.py  CloudFormations.py  StackCreator.py  StackDeletor.py
stkonstkoff/data/: stack-template-map.db  template_paths.db
tests/: Stack_Dictionary.py  Stack_map.py  auth_tests.py  test.py
tests/StackControllers/: CloudFormations.py  Create_Delete.py  webpdf-vpc.yaml
tests/StackControllers/data/: webpdf-web.yaml
tests/cft/: webpdf-security.yaml
tests/toremove/: CloudFormationStacks.py  CloudFormationTemplate.py  StackCreator.py  StackDeletor.py  Stack_Dictionary.py
tools/: 1password_cli_installation.sh  create_key_pair.sh  mytools.yaml  packages.yaml  share_point_upload.sh
tools/CFTClass/: AwsServices.h
tools/bash/: 1password_cli_installation.sh  create_key_pair.sh  make_alias.sh  make_file.sh  missing_pkgs.sh  send_file.sh
