[tool.poetry]
name = "StkOnStkOff"
version = "0.1.0"
description = "Tool for creation\\deletion of infrastructure"
authors = ["Bryan Duncanson <bryanduncanson17@gmail.com>"]
homepage = "https://github.com/bduncanson-17/stkonstksoff"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", # Adjusted the license
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.7"
boto3 = "^1.18.0"
botocore = "^1.29.120"
pyyaml = "^5.4.1"
cfn-lint = "^0.53.0"
argparse = "^1.5.0"

[tool.poetry.dev-dependencies]

[[tool.poetry.scripts]]
stkonstkoff.stackonstkoff = "main" # Adjusted the script name to match your project

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"
