[metadata]
name = StkOnStkOff
version = 0.1.0
description = Tool for creation\deletion of infrastructure
author = Bryan Duncanson
author_email = bryanduncanson17@gmail.com
url = https://github.com/bduncanson-17/stkonstksoff
classifiers = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MSI
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Typing :: Typed

[options]
packages = find:
install_requires = 
    boto3 >= 1.18.0
    pyyaml >= 5.4.1
    cfn-lint >= 0.53.0
    requests >= 2.2


